assets/css/main-responsive.css
@font-face {
    font-family: 'SF UI Display Light';
    font-style: normal;
    font-weight: normal;
    src: local('SF UI Display Light'), url('../fonts/sf-ui-display-light-58646b33e0551.woff') format('woff');
}

@font-face {
    font-family: 'SF UI Display Medium';
    font-style: normal;
    font-weight: normal;
    src: local('SF UI Display Medium'), url('../fonts/sf-ui-display-medium-58646be638f96.woff') format('woff');
}

@font-face {
    font-family: 'SF UI Display Bold';
    font-style: normal;
    font-weight: normal;
    src: local('SF UI Display Bold'), url('../fonts/sf-ui-display-bold-58646a511e3d9.woff') format('woff');
}

@font-face {
    font-family: 'SF UI Display Heavy';
    font-style: normal;
    font-weight: normal;
    src: local('SF UI Display Heavy'), url('../fonts/sf-ui-display-heavy-586470160b9e5.woff') format('woff');
}


/*
Gray: #8e8e93
*/
*, *:after, *:before {box-sizing: border-box;}

html {
    font-family: "SF UI Display Medium";
    width: auto;
}

div {
    display: block;
}

a {
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    /* custom */
    color: #8e8e93;
}

a:hover {
    color: #8080ff;
}

section {
    padding-left: 12vw;
    padding-right: 12vw;
    min-height: 100%;
    overflow: auto;
}

section .body-content {
    text-align: center;
    height: 100%;
    padding: 5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
}

section .column {
    float: left;
    padding: 1vw;
    width: 50%;
}

section .column img {
    width: 100%;
    max-width: 600px;
}

section img {
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

section img:hover {
    transform: scale(1.05);
}

section h2, section h3 {
    text-align: center;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

section h2:hover, section h3:hover {
    transform: scale(1.05);
}

.capsule-button {
    color: #ffffff;
    outline: none;
    padding: 11px 16px;
    background-color: #8080ff;
    border: none;
    border-radius: 30px;
    cursor: pointer;
    font-size: 15px;
    font-weight: 800;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

.neo-button {
    margin: 1em;
    border: none;
    outline: none;
    font-size: 16px;
    border-radius: 320px;
    padding: 16px;
    background-color: #EBECF0;
    text-shadow: 1px 1px 0 #FFF;
    color: #61677C;
    font-weight: bold;
    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
    transition: all 0.2s ease-in-out;
    cursor: pointer;
    font-weight: 600;
}

.squish.neo-button:hover {
    box-shadow: -2px -2px 5px #FFF, 2px 2px 5px #BABECC;
    transform: scale(1);
}

.squish.neo-button:active {
    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
    transform: scale(1);
    transition: none;
}

.buttons {
    padding: 10vh 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
}

.big-button {
    margin: 5px;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

.big-button button {
    padding: 20px 70px;
    font-size: 20px;
}

.big-button button:hover {
    transform: scale(1.05);
    opacity: 80%;
}

.red-button button {
    background-color: #E23838;
}

h1 {
    text-align: center;
    font-family: "SF UI Display Heavy";
    font-size: 100px;
}

h2 {
    font-family: "SF UI Display Heavy";
    font-size: 50px;
    margin-bottom: 50px;
}

h3 {
    font-family: "SF UI Display Heavy";
    font-size: 30px;
    color: gray;
}

p {
    font-family: "SF UI Display Light";
    font-size: 30px;
}

li a {
    color: #A3AAAE;
    height: auto;
    width: auto;
}

li,
a,
button {
    text-decoration: none;
}

.nav-container {
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px 10%;
    letter-spacing: 3px;
    width: auto;
    height: 75px;
    background-color: rgba(236, 238, 255, 0.95);
    z-index: 99;
    position: sticky;
    top: 0;
}

.nav__links li {
    display: inline-flex;
    padding: 0px 1vw;
}

.nav__links li {
    font-family: "SF UI Display Bold";
}

.nav__links {
    display: flex;
    list-style: none;
    margin: 0 13vw;
}

.nav-button {
    background-color: #8080ff;
    border-radius: 50%;
    padding: 10px;
}

.nav-button:hover {
    opacity: 0.8;
}

#about {
    background-color: #ECEEFF;
}

#features {
    background-color: black;
}

#features h2,
#features p {
    color: white;
}

#performance {
    background-color: #ECEEFF;
}

#team {
    display: inline-flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
}

#team p {
    margin: 10px;
    font-size: 20px;
}

.users {
    display: block;
    text-align: center;
    flex-direction: row;
    align-content: center;
    justify-content: center;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

user {
    width: 350px;
    flex-shrink: 1;
    display: inline-block;
    margin: 25px;
    text-align: center;
    padding: 20px;
    background-color: rgba(236, 238, 255, 0.95);;
    border-radius: 25px 25px;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
}

user:hover {
    opacity: 0.8;
    transform: scale(1.1);
}

#logo {
    width: 35px;
    border-radius: 30%;
    cursor: pointer;
    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
    /* custom */
}

#logo:hover {
    opacity: 80%;
}

#account-home {
    display: block;
    background-color:#E0E5EC;
    text-align: center;
}

#account-pp img{
    width: 20vw;
    height: 20vw;
    max-width: 150px;
    max-height: 150px;
    object-fit:cover;
    border-radius: 50%;
    box-shadow: -5px -5px 20px #FFF, 5px 5px 20px #BABECC;
    transition: all 0.2s ease-in-out;
}

#account-pp:hover img{
    box-shadow: -2px -2px 5px #FFF, 2px 2px 5px #BABECC;
    transform: scale(0.96);
}

#account-pp:active img{
    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
    transition: none;
    transform: scale(0.94);
}

.buttons-row {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}

@media screen and (max-width: 545px) {
    h1 {
        font-size: 15vw;
    }
    h2 {
        font-size: 35px;
    }
    h3 {
        font-size: 5vw;
    }
    p {
        font-size: 20px;
    }
    .big-button button {
        padding: 20px 35px;
        font-size: 4vw;
    }
    section {
        padding-top: 10vh;
    }
    user {
        width: 60vw;
    }
}

@media screen and (max-width: 1050px) {
    section .column {
        width: 100%;
        height: auto;
        padding-top: 50px;
        padding-bottom: 50px;
    }
    section img {
        width: 100%;
    }
}

